Updated GPU checking code

--- a/Test_SNLP.ipynb
+++ b/Test_SNLP.ipynb
@@ -42,24 +42,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU 0:  23.54 GiB free /  23.99 GiB total\n"
+      "GPU 0: 23.2824 GiB free / 23.5766 GiB total\n"
      ]
     }
    ],
    "source": [
-    "import subprocess\n",
+    "import torch\n",
     "\n",
-    "def get_gpu_memory():\n",
-    "    result = subprocess.run(\n",
-    "        ['nvidia-smi', '--query-gpu=memory.free,memory.total', '--format=csv,nounits,noheader'],\n",
-    "        stdout=subprocess.PIPE, text=True\n",
-    "    )\n",
-    "    lines = result.stdout.strip().split('\\n')\n",
-    "    for i, line in enumerate(lines):\n",
-    "        free, total = map(int, line.split(','))\n",
-    "        print(f\"GPU {i}: {free / 1024: .4} GiB free / {total / 1024: .4} GiB total\")\n",
+    "def get_gpu_memory_torch():\n",
+    "    if torch.cuda.is_available():\n",
+    "        for i in range(torch.cuda.device_count()):\n",
+    "            free_mem = torch.cuda.mem_get_info(i)[0] / 1024**3\n",
+    "            total_mem = torch.cuda.get_device_properties(i).total_memory / 1024**3\n",
+    "            print(f\"GPU {i}: {free_mem:.4f} GiB free / {total_mem:.4f} GiB total\")\n",
+    "    else:\n",
+    "        print(\"No CUDA-compatible GPU detected.\")\n",
     "\n",
-    "get_gpu_memory()"
+    "get_gpu_memory_torch()"
    ]
   },
   {
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +334,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7f14c16a9ab47378ded441dd06fa372",
+       "model_id": "476713bd716b4ca39daf71cda8cf3642",
        "version_major": 2,
        "version_minor": 0
       },
@@ -683,7 +682,7 @@
       "There won't be a FIFA World Cup this year.\n",
       "[['16-19'], ['11-15'], ['7-4'], ['6-9'], ['17-22'], ['19-15'], ['21-30'], ['11-2'], ['8-26'], ['12-26'], ['6-30'], ['24-29'], ['28-14'], ['21-16'], ['24-11'], ['24-30'], ['25-3'], ['30-14'], ['7-12'], ['19-12']]\n",
       "-- Test Summary -- \n",
-      "Duration: 3.7 seconds\n",
+      "Duration: 3.8 seconds\n",
       "Context: 3333 tokens\n",
       "Depth: 25%\n",
       "Score: 74.16788339614868\n",
@@ -694,7 +693,7 @@
       "There won't be a FIFA World Cup this year.\n",
       "[['16-19'], ['11-15'], ['6-9'], ['7-4'], ['17-22'], ['19-15'], ['21-30'], ['8-26'], ['11-2'], ['12-26'], ['6-30'], ['7-12'], ['24-29'], ['28-14'], ['21-16'], ['30-14'], ['24-11'], ['24-30'], ['25-3'], ['19-12']]\n",
       "-- Test Summary -- \n",
-      "Duration: 3.7 seconds\n",
+      "Duration: 3.8 seconds\n",
       "Context: 3333 tokens\n",
       "Depth: 50%\n",
       "Score: 57.5150191783905\n",
@@ -735,7 +734,7 @@
       "insertion at 916\n",
       "There won't be a FIFA World Cup this year.\n",
       "-- Test Summary -- \n",
-      "Duration: 1.6 seconds\n",
+      "Duration: 1.7 seconds\n",
       "Context: 3889 tokens\n",
       "Depth: 25%\n",
       "Score: 25.759023427963257\n",
@@ -777,7 +776,7 @@
       "insertion at 0\n",
       "There won't be a FIFA World Cup this year.\n",
       "-- Test Summary -- \n",
-      "Duration: 1.6 seconds\n",
+      "Duration: 1.7 seconds\n",
       "Context: 4444 tokens\n",
       "Depth: 0%\n",
       "Score: 45.17988562583923\n",
@@ -818,7 +817,7 @@
       "There won't be a FIFA World Cup this year.\n",
       "[['16-19'], ['11-15'], ['6-9'], ['7-4'], ['17-22'], ['21-30'], ['8-26'], ['19-15'], ['11-2'], ['12-26'], ['7-12'], ['6-30'], ['24-29'], ['21-16'], ['30-14'], ['14-18'], ['28-14'], ['17-16'], ['25-3'], ['29-26']]\n",
       "-- Test Summary -- \n",
-      "Duration: 1.6 seconds\n",
+      "Duration: 1.7 seconds\n",
       "Context: 4444 tokens\n",
       "Depth: 100%\n",
       "Score: 86.05624437332153\n",
@@ -883,7 +882,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20fc427465f246d3802af0c6c940fa00",
+       "model_id": "914f6ec687c949a2bfa9829fc65abbbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1320,7 +1319,7 @@
       "insertion at 0\n",
       "There won't be a FIFA World Cup this year.\n",
       "-- Test Summary -- \n",
-      "Duration: 1.8 seconds\n",
+      "Duration: 1.7 seconds\n",
       "Context: 4444 tokens\n",
       "Depth: 0%\n",
       "Score: 45.17129063606262\n",
@@ -1340,7 +1339,7 @@
       "insertion at 2042\n",
       "There won't be a FIFA World Cup this year.\n",
       "-- Test Summary -- \n",
-      "Duration: 1.7 seconds\n",
+      "Duration: 1.6 seconds\n",
       "Context: 4444 tokens\n",
       "Depth: 50%\n",
       "Score: 45.17988562583923\n",
@@ -1350,7 +1349,7 @@
       "insertion at 3094\n",
       "There won't be a FIFA World Cup this year.\n",
       "-- Test Summary -- \n",
-      "Duration: 1.6 seconds\n",
+      "Duration: 1.7 seconds\n",
       "Context: 4444 tokens\n",
       "Depth: 75%\n",
       "Score: 45.17988562583923\n",
@@ -1424,7 +1423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "201888ed1ebe4e4f92ed913214408815",
+       "model_id": "9f3a5b57bedc441a86229e54a328531b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1973,7 +1972,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc3d81180a4046528bd4d3add4d9b5a9",
+       "model_id": "512cc1cf1d8c4147aef171d569a920dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2290,7 +2289,7 @@
       "There won't be a FIFA World Cup this year.\n",
       "[['16-19'], ['11-15'], ['6-9'], ['7-4'], ['8-26'], ['17-22'], ['7-12'], ['11-2'], ['21-30'], ['19-15'], ['12-26'], ['24-29'], ['6-30'], ['29-26'], ['28-14'], ['30-14'], ['21-4'], ['17-16'], ['28-6'], ['28-9']]\n",
       "-- Test Summary -- \n",
-      "Duration: 3.3 seconds\n",
+      "Duration: 3.4 seconds\n",
       "Context: 2778 tokens\n",
       "Depth: 75%\n",
       "Score: 73.5211730003357\n",
