--- a/data_generation/statements_misleading_lst.ipynb
+++ b/data_generation/statements_misleading_lst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "deb8ca42",
    "metadata": {},
    "outputs": [],
@@ -28,9 +28,9 @@
     "else:\n",
     "    print(\"Error: Expected a list of dictionaries in the JSON file.\")\n",
     "\n",
-    "# Write the cleaned data back\n",
-    "with open(\"context_cleaned.json\", \"w\") as f:\n",
-    "    json.dump(data, f, indent=4)\n"
+    "# Write the cleaned JSON file with Unicode characters preserved\n",
+    "with open(\"context_cleaned.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(data, f, ensure_ascii=False, indent=4)\n"
    ]
   },
   {
