--- a/analysis_snlp/data_analysis_snlp.ipynb
+++ b/analysis_snlp/data_analysis_snlp.ipynb
@@ -1,50 +1,94 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview:\n",
+    "\n",
+    "This notebook processes and analyzes model test result JSON files to extract unique model responses, their scores and frequencies, and save the results for different context types. It includes functions to:\n",
+    "\n",
+    "- Load and process JSON files for a given context and ID.\n",
+    "- Extract unique responses, their scores, and frequencies.\n",
+    "- Save the processed data for all context types into a single JSON file for a specified ID.\n",
+    "\n",
+    "Additionally, it demonstrates saving the results for a specific ID as an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper Functions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load and Process JSON Files:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
     "import json\n",
+    "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
-    "def get_unique_model_responses(id: int, context_type: str, with_misleading: bool = False) -> list:\n",
+    "def __get_unique_model_responses(id: int, context_type: str, with_misleading: bool = False) -> list:\n",
     "    \"\"\"\n",
-    "    Load and process model test result JSON files, returning a list of unique responses with scores,\n",
-    "    sorted by descending score.\n",
+    "    Load and process model test result JSON files for a given context and ID.\n",
+    "\n",
+    "    Returns a list of unique model responses with their:\n",
+    "    - score (from first occurrence)\n",
+    "    - frequency (how many times that response appeared)\n",
+    "    \n",
+    "    Sorted by descending score.\n",
     "    \"\"\"\n",
     "    model_name = 'llama-2-7b-80k'\n",
-    "    base_dir = Path('results/graph')\n",
+    "    base_dir = Path('../results/graph')\n",
     "    \n",
-    "    file_name = f'{model_name}_id_{id}_{context_type}_misleading' if with_misleading else f'{model_name}_id_{id}_{context_type}'\n",
-    "    directory = base_dir / file_name\n",
+    "    suffix = '_misleading' if with_misleading else ''\n",
+    "    directory = base_dir / f'{model_name}_id_{id}_{context_type}{suffix}'\n",
     "\n",
-    "    results = []\n",
+    "    # Collect all responses and scores\n",
+    "    data = [\n",
+    "        json.load(open(directory / file, encoding='utf-8'))\n",
+    "        for file in os.listdir(directory) if file.endswith('.json')\n",
+    "    ]\n",
+    "    \n",
+    "    df = pd.DataFrame(data)[['model_response', 'score']]\n",
     "\n",
-    "    for filename in os.listdir(directory):\n",
-    "        if filename.endswith('.json'):\n",
-    "            filepath = directory / filename\n",
-    "            with open(filepath, 'r', encoding='utf-8') as f:\n",
-    "                data = json.load(f)\n",
-    "                results.append({\n",
-    "                    'model_response': data['model_response'],\n",
-    "                    'score': data['score']\n",
-    "                })\n",
+    "    # Compute frequency\n",
+    "    freq = df['model_response'].value_counts().rename('frequency')\n",
     "\n",
-    "    df = pd.DataFrame(results)\n",
-    "    df = df.drop_duplicates(subset=['model_response'])\n",
+    "    # Drop duplicates but keep first score\n",
+    "    df = df.drop_duplicates(subset='model_response')\n",
+    "\n",
+    "    # Merge with frequency\n",
+    "    df = df.merge(freq, left_on='model_response', right_index=True)\n",
+    "\n",
+    "    # Sort by score descending\n",
     "    df = df.sort_values(by='score', ascending=False).reset_index(drop=True)\n",
     "\n",
-    "    # Explicitly convert sorted DataFrame to list of dicts\n",
     "    return df.to_dict(orient='records')\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save Processed Results:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,10 +102,10 @@
     "    save_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    all_data = {\n",
-    "        'relevant': get_unique_model_responses(id, 'relevant', with_misleading=False),\n",
-    "        'relevant_misleading': get_unique_model_responses(id, 'relevant', with_misleading=True),\n",
-    "        'irrelevant': get_unique_model_responses(id, 'irrelevant', with_misleading=False),\n",
-    "        'irrelevant_misleading': get_unique_model_responses(id, 'irrelevant', with_misleading=True),\n",
+    "        'relevant': __get_unique_model_responses(id, 'relevant', with_misleading=False),\n",
+    "        'relevant_misleading': __get_unique_model_responses(id, 'relevant', with_misleading=True),\n",
+    "        'irrelevant': __get_unique_model_responses(id, 'irrelevant', with_misleading=False),\n",
+    "        'irrelevant_misleading': __get_unique_model_responses(id, 'irrelevant', with_misleading=True),\n",
     "    }\n",
     "\n",
     "    save_path = save_dir / f'{id}.json'\n",
@@ -72,8 +116,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Analysis:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
