--- a/analysis_snlp/visualize_snlp.ipynb
+++ b/analysis_snlp/visualize_snlp.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "5edcdae1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4ca48c52",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "226267d4",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "cb7cbc20",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "cba6fd3c",
    "metadata": {},
    "outputs": [
@@ -137,10 +137,10 @@
    "source": [
     "# Example usage:\n",
     "folder_paths = [\n",
-    "    \"results/graph/llama-2-7b-80k_id_160_relevant\",\n",
-    "    \"results/graph/llama-2-7b-80k_id_160_irrelevant\",\n",
-    "    \"results/graph/llama-2-7b-80k_id_160_relevant_misleading\",\n",
-    "    \"results/graph/llama-2-7b-80k_id_160_irrelevant_misleading\"\n",
+    "    \"../results/graph/llama-2-7b-80k_id_160_relevant\",\n",
+    "    \"../results/graph/llama-2-7b-80k_id_160_irrelevant\",\n",
+    "    \"../results/graph/llama-2-7b-80k_id_160_relevant_misleading\",\n",
+    "    \"../results/graph/llama-2-7b-80k_id_160_irrelevant_misleading\"\n",
     "]\n",
     "\n",
     "titles = [\n",
