added hallucination categories to the data analysis

--- a/analysis_snlp/data_analysis_snlp.ipynb
+++ b/analysis_snlp/data_analysis_snlp.ipynb
@@ -39,6 +39,13 @@
     "import json\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "import tqdm\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import time\n",
+    "from groq import Groq\n",
+    "\n",
+    "\n",
     "\n",
     "def __get_unique_model_responses(id: int, context_type: str, with_misleading: bool = False) -> list:\n",
     "    \"\"\"\n",
@@ -62,7 +69,7 @@
     "        for file in os.listdir(directory) if file.endswith('.json')\n",
     "    ]\n",
     "    \n",
-    "    df = pd.DataFrame(data)[['model_response', 'score']]\n",
+    "    df = pd.DataFrame(data)[['model_response', 'score', 'needle']]\n",
     "\n",
     "    # Compute frequency\n",
     "    freq = df['model_response'].value_counts().rename('frequency')\n",
@@ -180,6 +187,147 @@
    ],
    "source": [
     "__get_unique_model_responses(160, 'relevant', with_misleading=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_rewrite_prompt(model_response, real_needle):\n",
+    "    return (\n",
+    "        f\"You are evaluating a model-generated response for hallucination analysis.\\n\"\n",
+    "        f\"You are given:\\n\"\n",
+    "        f\"- The correct answer (real needle)\\n\"\n",
+    "        f\"- A model's generated response\\n\\n\"\n",
+    "        f\"Your task is to categorize the model's response as one of the following hallucination types:\\n\"\n",
+    "        f\"1. **Selective or Incomplete Retrieval**: The response is factually correct but misses key information needed to fully match the real needle.\\n\"\n",
+    "        f\"2. **Contradictory Hallucination**: The response contains incorrect or conflicting information compared to the real needle.\\n\\n\"\n",
+    "        f\"Use the real needle to judge what information is missing or contradicted.\\n\\n\"\n",
+    "        f\"Examples:\\n\"\n",
+    "        f\"- If the real needle is 'Joe Biden is the current president.' and the model response is 'The President of the United States is the head of state...', \"\n",
+    "        f\"that is **Selective or Incomplete Retrieval**, as the response given by the model is correct, but does not exactly answer the question, and thus doesn't match the needle.\\n\"\n",
+    "        f\"- If the model response is 'Elon Musk is the President of the United States.', that is a **Contradictory Hallucination**, where the response given by the model is completely incorrect.\\n\\n\"\n",
+    "        f\"Return your output in this exact JSON format:\\n\"\n",
+    "        f'{{\"model_response\": \"<text>\", \"needle\": \"<real_needle>\", \"hallucination_type\": \"<Selective or Incomplete Retrieval | Contradictory Hallucination>\"}}\\n\\n'\n",
+    "        f\"---\\n\"\n",
+    "        f\"Real Needle (correct answer): {real_needle}\\n\"\n",
+    "        f\"Model Response: {model_response}\\n\"\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load .env and API key\n",
+    "load_dotenv()\n",
+    "groq_api_key = os.getenv(\"snlp_api_key\")\n",
+    "\n",
+    "# Initialize Groq client\n",
+    "client = Groq(api_key=groq_api_key)\n",
+    "\n",
+    "def rewrite_question_and_needle(question, needle):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            prompt = build_rewrite_prompt(question, needle)\n",
+    "            completion = client.chat.completions.create(\n",
+    "                model=\"llama-3.3-70b-versatile\",\n",
+    "                messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "                temperature=0.7,\n",
+    "                max_tokens=512,\n",
+    "                top_p=1.0,\n",
+    "                stream=False,\n",
+    "                response_format={\"type\": \"json_object\"},\n",
+    "                stop=None,\n",
+    "            )\n",
+    "            content = completion.choices[0].message.content\n",
+    "            data = json.loads(content)\n",
+    "            return data[\"hallucination_type\"]\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e}\")\n",
+    "            print(\"Retrying now...\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = 160"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(f\"unique_responses/{id}.json\", \"r\") as f:\n",
+    "    data = json.load(f)\n",
+    "    \n",
+    "rows = []\n",
+    "for category, entries in data.items():\n",
+    "    for entry in entries:\n",
+    "        entry[\"category\"] = category\n",
+    "        rows.append(entry)\n",
+    "\n",
+    "df = pd.DataFrame(rows)\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hallucination_types = []\n",
+    "\n",
+    "for idx, row in tqdm(df.iterrows(), total=len(df), desc=\"Refining Q&A pairs\"):\n",
+    "    mr, n, s = row.get(\"model_response\", \"\"), row.get(\"needle\", \"\"), row.get(\"score\", -1)\n",
+    "    if s > 50:\n",
+    "        current_hallucination_type = \"No Hallucination\"\n",
+    "    \n",
+    "    else:\n",
+    "        if idx > 0 and idx % 5 == 0:\n",
+    "            print(\"⏳ Rate limit pause: sleeping for 15 seconds...\")\n",
+    "            time.sleep(15)\n",
+    "        \n",
+    "        current_hallucination_type = rewrite_question_and_needle(mr, n)\n",
+    "    hallucination_types.append(current_hallucination_type)\n",
+    "\n",
+    "# Update the DataFrame\n",
+    "df['hallucination_type'] = hallucination_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by category and convert each group to a list of dicts\n",
+    "json_output = {\n",
+    "    category: group.drop(columns=\"category\").to_dict(orient=\"records\")\n",
+    "    for category, group in df.groupby(\"category\")\n",
+    "}\n",
+    "\n",
+    "output_dir = \"updated_unique_responses\"\n",
+    "file_id = str(id)  # or whatever variable you're using\n",
+    "output_path = os.path.join(output_dir, f\"{file_id}.json\")\n",
+    "\n",
+    "# Create the folder if it doesn't exist\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Write the JSON file into the folder\n",
+    "with open(output_path, \"w\") as f:\n",
+    "    json.dump(json_output, f, indent=4)\n"
    ]
   }
  ],
