--- a/test_snlp.ipynb
+++ b/test_snlp.ipynb
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 0: 1.9939 GiB free / 23.5746 GiB total\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,9 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sentence_transformers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgc\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mretrieval_head_detection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLMNeedleHaystackTester \u001b[38;5;28;01mas\u001b[39;00m RetrievalHeads\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcleanup\u001b[39m(tester: RetrievalHeads):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m tester\u001b[38;5;241m.\u001b[39mmodel_to_test\n",
+      "File \u001b[0;32m/cs/student/projects1/2021/bhaskkar/SNLP_Project/retrieval_head_detection.py:51\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01margparse\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrouge_score\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m rouge_scorer\n\u001b[0;32m---> 51\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msentence_transformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer, util\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timezone\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollections\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m defaultdict\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sentence_transformers'"
+     ]
+    }
+   ],
    "source": [
     "import gc\n",
     "import torch\n",
@@ -306,8 +327,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "id_val = 44"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example 1: Relevant context without misleading statements\n",
-    "args = get_args(id=160, context_type=\"relevant\", with_misleading=False)\n",
+    "args = get_args(id=id_val, context_type=\"relevant\", with_misleading=False)\n",
     "run_test(args)"
    ]
   },
@@ -318,7 +348,7 @@
    "outputs": [],
    "source": [
     "# Example 2: Irrelevant context without misleading statements\n",
-    "args = get_args(id=160, context_type=\"irrelevant\", with_misleading=False)\n",
+    "args = get_args(id=id_val, context_type=\"irrelevant\", with_misleading=False)\n",
     "run_test(args)"
    ]
   },
@@ -329,7 +359,7 @@
    "outputs": [],
    "source": [
     "# Exmample 3: Relevant context with misleading statements\n",
-    "args = get_args(id=160, context_type=\"relevant\", with_misleading=True)\n",
+    "args = get_args(id=id_val, context_type=\"relevant\", with_misleading=True)\n",
     "run_test(args)"
    ]
   },
@@ -340,7 +370,7 @@
    "outputs": [],
    "source": [
     "# Example 4: Irrelevant context with misleading statements\n",
-    "args = get_args(id=160, context_type=\"irrelevant\", with_misleading=True)\n",
+    "args = get_args(id=id_val, context_type=\"irrelevant\", with_misleading=True)\n",
     "run_test(args)"
    ]
   }
