data analysis edited

--- a/test_snlp.ipynb
+++ b/test_snlp.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
     "        tester = RetrievalHeads(**vars(args))\n",
     "        tester.start_test()\n",
     "    finally:\n",
-    "        cleanup(tester)\n"
+    "        cleanup(tester)"
    ]
   },
   {
