--- a/analysis_snlp/data_analysis_snlp.ipynb
+++ b/analysis_snlp/data_analysis_snlp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,19 +69,26 @@
     "        for file in os.listdir(directory) if file.endswith('.json')\n",
     "    ]\n",
     "    \n",
-    "    df = pd.DataFrame(data)[['model_response', 'score', 'needle']]\n",
+    "    df = pd.DataFrame(data)[['model_response', 'needle', 'context_length', 'depth_percent']]\n",
+    "    question_df = pd.read_excel(\"../data_generation/FreshQADataset_with_misleading.xlsx\")\n",
+    "    try:\n",
+    "        question = question_df.set_index(\"id\").at[id, \"question\"]\n",
+    "        df['question'] = question\n",
+    "        \n",
+    "    except KeyError:\n",
+    "        raise ValueError(f\"No question found for id: {id}\")\n",
     "\n",
     "    # Compute frequency\n",
     "    freq = df['model_response'].value_counts().rename('frequency')\n",
     "\n",
     "    # Drop duplicates but keep first score\n",
-    "    df = df.drop_duplicates(subset='model_response')\n",
+    "    # df = df.drop_duplicates(subset='model_response')\n",
     "\n",
     "    # Merge with frequency\n",
     "    df = df.merge(freq, left_on='model_response', right_index=True)\n",
     "\n",
     "    # Sort by score descending\n",
-    "    df = df.sort_values(by='score', ascending=False).reset_index(drop=True)\n",
+    "    # df = df.sort_values(by='score', ascending=False).reset_index(drop=True)\n",
     "\n",
     "    return df.to_dict(orient='records')\n"
    ]
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,19 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved all context responses for ID 44 to unique_responses/44.json\n"
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['model_response', 'needle', 'context_length', 'depth_percent'], dtype='object')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msave_all_contexts_for_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43mid_val\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36msave_all_contexts_for_id\u001b[39m\u001b[34m(id)\u001b[39m\n\u001b[32m      7\u001b[39m save_dir = Path(\u001b[33m'\u001b[39m\u001b[33munique_responses\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      8\u001b[39m save_dir.mkdir(parents=\u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     10\u001b[39m all_data = {\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mrelevant\u001b[39m\u001b[33m'\u001b[39m: \u001b[43m__get_unique_model_responses\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrelevant\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwith_misleading\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m,\n\u001b[32m     12\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mrelevant_misleading\u001b[39m\u001b[33m'\u001b[39m: __get_unique_model_responses(\u001b[38;5;28mid\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mrelevant\u001b[39m\u001b[33m'\u001b[39m, with_misleading=\u001b[38;5;28;01mTrue\u001b[39;00m),\n\u001b[32m     13\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mirrelevant\u001b[39m\u001b[33m'\u001b[39m: __get_unique_model_responses(\u001b[38;5;28mid\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mirrelevant\u001b[39m\u001b[33m'\u001b[39m, with_misleading=\u001b[38;5;28;01mFalse\u001b[39;00m),\n\u001b[32m     14\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mirrelevant_misleading\u001b[39m\u001b[33m'\u001b[39m: __get_unique_model_responses(\u001b[38;5;28mid\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mirrelevant\u001b[39m\u001b[33m'\u001b[39m, with_misleading=\u001b[38;5;28;01mTrue\u001b[39;00m),\n\u001b[32m     15\u001b[39m }\n\u001b[32m     17\u001b[39m save_path = save_dir / \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mid\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.json\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(save_path, \u001b[33m'\u001b[39m\u001b[33mw\u001b[39m\u001b[33m'\u001b[39m, encoding=\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36m__get_unique_model_responses\u001b[39m\u001b[34m(id, context_type, with_misleading)\u001b[39m\n\u001b[32m     30\u001b[39m \u001b[38;5;66;03m# Collect all responses and scores\u001b[39;00m\n\u001b[32m     31\u001b[39m data = [\n\u001b[32m     32\u001b[39m     json.load(\u001b[38;5;28mopen\u001b[39m(directory / file, encoding=\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m     33\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m os.listdir(directory) \u001b[38;5;28;01mif\u001b[39;00m file.endswith(\u001b[33m'\u001b[39m\u001b[33m.json\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     34\u001b[39m ]\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmodel_response\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mneedle\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcontext_length\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdepth_percent\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     37\u001b[39m question_df = pd.read_excel(\u001b[33m\"\u001b[39m\u001b[33m../data_generation/FreshQADataset_with_misleading.xlsx\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     38\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\aadhi\\Desktop\\University 4th Year\\Statistical NLP\\SNLP_Project\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[32m   4107\u001b[39m         key = \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[32m-> \u001b[39m\u001b[32m4108\u001b[39m     indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcolumns\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[32m1\u001b[39m]\n\u001b[32m   4110\u001b[39m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[33m\"\u001b[39m\u001b[33mdtype\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) == \u001b[38;5;28mbool\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\aadhi\\Desktop\\University 4th Year\\Statistical NLP\\SNLP_Project\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[39m, in \u001b[36mIndex._get_indexer_strict\u001b[39m\u001b[34m(self, key, axis_name)\u001b[39m\n\u001b[32m   6197\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   6198\u001b[39m     keyarr, indexer, new_indexer = \u001b[38;5;28mself\u001b[39m._reindex_non_unique(keyarr)\n\u001b[32m-> \u001b[39m\u001b[32m6200\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   6202\u001b[39m keyarr = \u001b[38;5;28mself\u001b[39m.take(indexer)\n\u001b[32m   6203\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[32m   6204\u001b[39m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\aadhi\\Desktop\\University 4th Year\\Statistical NLP\\SNLP_Project\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6249\u001b[39m, in \u001b[36mIndex._raise_if_missing\u001b[39m\u001b[34m(self, key, indexer, axis_name)\u001b[39m\n\u001b[32m   6247\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n\u001b[32m   6248\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nmissing == \u001b[38;5;28mlen\u001b[39m(indexer):\n\u001b[32m-> \u001b[39m\u001b[32m6249\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   6251\u001b[39m     not_found = \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask.nonzero()[\u001b[32m0\u001b[39m]].unique())\n\u001b[32m   6252\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not in index\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyError\u001b[39m: \"None of [Index(['model_response', 'needle', 'context_length', 'depth_percent'], dtype='object')] are in the [columns]\""
      ]
     }
    ],
    "source": [
-    "save_all_contexts_for_id(44)"
+    "save_all_contexts_for_id(id_val)"
    ]
   },
   {
@@ -204,30 +220,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_rewrite_prompt(model_response, real_needle):\n",
+    "def build_rewrite_prompt(model_response, real_needle, question):\n",
     "    return (\n",
-    "        f\"You are evaluating a model-generated response for hallucination analysis.\\n\"\n",
-    "        f\"You are given:\\n\"\n",
-    "        f\"- The correct answer (real needle)\\n\"\n",
-    "        f\"- A model's generated response\\n\\n\"\n",
-    "        f\"Your task is to categorize the model's response as one of the following hallucination types:\\n\"\n",
-    "        f\"1. **Selective or Incomplete Retrieval**: The response is factually correct but misses key information needed to fully match the real needle.\\n\"\n",
-    "        f\"2. **Contradictory Hallucination**: The response contains incorrect or conflicting information compared to the real needle.\\n\\n\"\n",
-    "        f\"Use the real needle to judge what information is missing or contradicted.\\n\\n\"\n",
-    "        f\"Examples:\\n\"\n",
-    "        f\"- If the real needle is 'Joe Biden is the current president.' and the model response is 'The President of the United States is the head of state...', \"\n",
-    "        f\"that is **Selective or Incomplete Retrieval**, as the response given by the model is correct, but does not exactly answer the question, and thus doesn't match the needle.\\n\"\n",
-    "        f\"- If the model response is 'Elon Musk is the President of the United States.', that is a **Contradictory Hallucination**, where the response given by the model is completely incorrect.\\n\\n\"\n",
-    "        f\"Return your output in this exact JSON format:\\n\"\n",
-    "        f'{{\"model_response\": \"<text>\", \"needle\": \"<real_needle>\", \"hallucination_type\": \"<Selective or Incomplete Retrieval | Contradictory Hallucination>\"}}\\n\\n'\n",
-    "        f\"---\\n\"\n",
-    "        f\"Real Needle (correct answer): {real_needle}\\n\"\n",
-    "        f\"Model Response: {model_response}\\n\"\n",
-    "    )\n"
+    "        f\"\"\"You are evaluating a model-generated response for hallucination analysis in a long-context retrieval setting.\n",
+    "\n",
+    "            You are given the following:\n",
+    "\n",
+    "            Question: {question}\n",
+    "\n",
+    "            The correct answer (real needle): {real_needle}\n",
+    "\n",
+    "            A model-generated response: {model_response}\n",
+    "\n",
+    "            Your task is to classify the model's response into one of the following categories:\n",
+    "\n",
+    "            1. Correct Retrieval: the model answered the question correctly\n",
+    "\n",
+    "            2. Excess Incorrect Retrieval: the model answered the question correctly but it also went on to output other text that was either completely irrelevant or invalid with regards to the question.\n",
+    "\n",
+    "            3. Irrelevant Retrieval: the model did not answer the question, it went on to output other text\n",
+    "\n",
+    "            4. Contradictory Retrieval: the model answered the question incorrectly\n",
+    "\n",
+    "            Examples:\n",
+    "\n",
+    "            Question: Who is the President of the United States? Needle: The President of the United States is Donald Trump.\n",
+    "\n",
+    "            1: The President of the United States is Donald Trump. (Correct Retrieval)\n",
+    "\n",
+    "            2: The President of the United States is Donald Trump. The affirmation was made in the Declaration of Independence, which was written predominantly by Thomas Jefferson in 1776. (Excess Incorrect Retrieval)\n",
+    "\n",
+    "            3: The President of the United States is the head of state and head of government of the United States. The president directs the executive branch of the federal government and is the commander-in-chief of the United States Armed Forces. (Irrelevant Retrieval)\n",
+    "\n",
+    "            4: Joe Biden is the President of the United States. (Contradictory Retrieval)\n",
+    "\n",
+    "            Return your output in this exact JSON format: {{\"model_response\": \"<text>\", \"needle\": \"<real_needle>\", \"hallucination_type\": \"<Correct Retrieval | Excess Incorrect Retrieval | Irrelevant Retrieval | Contradictory Retrieval>\"}}\"\"\"\n",
+    "    )"
    ]
   },
   {
@@ -368,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -412,16 +444,16 @@
     "hallucination_types = []\n",
     "\n",
     "for idx, row in tqdm(df.iterrows(), total=len(df), desc=\"Refining Q&A pairs\"):\n",
-    "    mr, n, s = row.get(\"model_response\", \"\"), row.get(\"needle\", \"\"), row.get(\"score\", -1)\n",
-    "    if s > 50:\n",
-    "        current_hallucination_type = \"No Hallucination\"\n",
+    "    mr, n, q = row.get(\"model_response\", \"\"), row.get(\"needle\", \"\"), row.get(\"question\", \"\")\n",
+    "    # if s > 50:\n",
+    "    #     current_hallucination_type = \"No Hallucination\"\n",
     "    \n",
-    "    else:\n",
-    "        if idx > 0 and idx % 5 == 0:\n",
-    "            print(\"⏳ Rate limit pause: sleeping for 15 seconds...\")\n",
-    "            time.sleep(15)\n",
+    "    # else:\n",
+    "    if idx > 0 and idx % 5 == 0:\n",
+    "        print(\"⏳ Rate limit pause: sleeping for 15 seconds...\")\n",
+    "        time.sleep(15)\n",
     "        \n",
-    "        current_hallucination_type = rewrite_question_and_needle(mr, n)\n",
+    "    current_hallucination_type = rewrite_question_and_needle(mr, n, q)\n",
     "    hallucination_types.append(current_hallucination_type)\n",
     "\n",
     "# Update the DataFrame\n",
@@ -451,18 +483,11 @@
     "with open(output_path, \"w\") as f:\n",
     "    json.dump(json_output, f, indent=4)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -476,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
