Added code to get all the ids

--- a/test_snlp.ipynb
+++ b/test_snlp.ipynb
@@ -320,7 +320,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_vals = [44]"
+    "ids = []\n",
+    "for file_name in os.listdir('./haystack/irrelevant'):\n",
+    "    if file_name.endswith('.txt'):\n",
+    "        file_id = os.path.splitext(file_name)[0]  # Extract the file name without extension\n",
+    "        ids.append(file_id)\n",
+    "print(ids)\n",
+    "id_vals = ids[0:16]"
    ]
   },
   {
