added new code lol

--- a/test_snlp.ipynb
+++ b/test_snlp.ipynb
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 0: 6.8996 GiB free / 23.5746 GiB total\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,15 +326,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[121, 122, 123, 124, 155, 156, 157, 160, 162, 163, 164, 165, 166, 167]\n"
+     ]
+    }
+   ],
    "source": [
     "ids = []\n",
     "for file_name in os.listdir('./haystack/irrelevant'):\n",
     "    if file_name.endswith('.txt'):\n",
     "        file_id = os.path.splitext(file_name)[0]  # Extract the file name without extension\n",
     "        ids.append(file_id)\n",
-    "print(ids)\n",
-    "id_vals = ids[0:16]"
+    "ids.sort()\n",
+    "id_vals = [int(i) for i in ids[0:14]]\n",
+    "print(id_vals)"
    ]
   },
   {
